Nlog eklendi. (Txt ve Sqlserver ile loglama)

--- a/ScheduleControl.Business/ScheduleControl.Business.csproj
+++ b/ScheduleControl.Business/ScheduleControl.Business.csproj
@@ -5,8 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="C:\Users\Merve Utas\.nuget\packages\nlog.config\4.7.15\contentFiles\any\any\NLog.config" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="NLog" Version="5.0.5" />
-    <PackageReference Include="NLog.Config" Version="4.7.15" />
   </ItemGroup>
 
   <ItemGroup>
